<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PruebaEpubReader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember">Remember</string>
    <string name="dropbox">Dropbox</string>
    <string name="link_button">dropbox link</string>
    <string name="bookname">Book Name</string>
    <string name="date">Date</string>
    <string name="bookicon">Book Icon</string>
    <string name="name">Name</string>
    <string-array name="spinner_array">
	    <item>@string/name</item>
	    <item>@string/date</item>
  	</string-array>
	    <string name="coverbookimage">Book Cover</string>

</resources>
